# techtalk

./: README.md  hello.py  pyproject.toml
.github/workflows/: build.yml  deploy.yml  pylint.yml  release.yml  test.yml
greetings/: hello.py
tests/: test_greetings.py
