[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "greetings"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["greetings"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"